--- a/WebApi/Dockerfile
+++ b/WebApi/Dockerfile
@@ -1,9 +1,11 @@
+# 1. uild compile image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /build
 COPY . .
 RUN dotnet restore 
 RUN dotnet publish -c Release -o out
 
+# 2. Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 LABEL description="hallo app"
 LABEL organisation="KSB St. Gallen"
