connection string & docker compose with mongodb

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "DatabaseSettings": {
-    "ConnectionString": "mongodb://aajnur:myPW@localhost:27017"
+    "ConnectionString": "mongodb://aajnur:myPW@mongodb:27017"
   }
 }
