--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "5001:5001"
     depends_on:
       - mongodb
+    environment:
+      DatabaseSettings__ConnectionString: "mongodb://aajnur:myPW@mongodb:27017"
  
   mongodb:
     image: mongo
